--- a/01.html
+++ b/01.html
@@ -43,7 +43,7 @@
                 </p>
             </div>
             <div class="b_1">
-                <img src="billeder/02mockup.png" alt="mockup">
+                <img src="billeder/02mockup.webp" alt="mockup">
             </div>
         </section>
     </main>
