--- a/02.html
+++ b/02.html
@@ -42,12 +42,12 @@
                 <p>I tema 03 "Grundlæggende UX" blev vi tildelt en case som skulle udarbejdes ved design af en webshop (prototype), der sælger t-shirts. Vi lærte om vigtigheden af brugervenlighed ved udformning af et website for at opnå den bedst mulige brugeroplevelse. Det gjorde vi ved hjælp af forskellige former og metoder af research, test og design. Vi stiftede blandt andet kendskab med gængse UI-konventioner, copywriting og micro- copywriting, samt kvantitative og kvalitative undersøgelsesmetoder. Den kvantitative undersøgelse blev udarbejdet via spørgeskemaundersøgelse i form af en “google survey”. Den kvalitative undersøgelse blev udarbejdet via et interview af en potentiel bruger / køber af vores fiktive produkt. </p>
             </div>
             <div class="b_1">
-                <img src="billeder/03_mockup.png" alt="mockup">
+                <img src="billeder/03_mockup.webp" alt="mockup">
             </div>
         </section>
         <section id="section_3">
             <div class="b_2">
-                <img src="billeder/05_mockup.png" alt="mockup2">
+                <img src="billeder/05_mockup.webp" alt="mockup2">
             </div>
             <div class="tekst_2">
                 <h3>UDVIKLING AF PROTOTYPE</h3>
@@ -60,7 +60,7 @@
                 <p>Jeg fandt hurtigt ud af at min solution sketch alligevel ikke for mit vedkommende havde et tilfredsstillende design og jeg fandt løbende på nye idéer og muligheder af webshoppens design. Derfor endte min webshop med at afvige en del fra mine sketches. <br><br> I mit design af prototypen havde jeg fokus på at gøre webshoppen simpel og minimalistisk uden mange farver eller andre potentielt forvirrende elementer, samtidig med at den havde et “sportsligt og bæredygtigt udtryk”. Ved at gøre brug af billeder, der har sportsudøvere i færd med dyrke sport som motiv, forsøgte jeg at skabe den sportslige stemning. Samtidig producerede jeg mine produktbilleder af t-shirtsene med virkelige sports t-shirts fra egen garderobe. Jeg implementerede “SUSTAINABLE MATERIALS” copy på mine produktsider for at tydeliggøre, at man havde med et bæredygtigt produkt at gøre. Derudover implementerede jeg blandt andet micro-copy i form af “Reviews”, der skulle have til formål at overbevise kunden om troværdigheden af produktet og webshop/afsender. <br><br> I forbindelse med feedback på min pitch blev jeg gjort opmærksom på at tydeliggørelse af den bæredygtige del af min produkt var mangelfuldt - der var simpelthen ikke nok information, hvor det fremgik at mit produkt også var bæredygtigt udover at være sportswear. Det er noget jeg vil tage med mig i fremtiden. </p>
             </div>
             <div class="b_3">
-                <img src="billeder/04_mockup.png" alt="designproces">
+                <img src="billeder/04_mockup.webp" alt="designproces">
             </div>
         </section>
         <section id="section_5">
