--- a/03.html
+++ b/03.html
@@ -42,13 +42,13 @@
                 <p>I tema 04 “Animation” fik vi tildelt en opgave, der omhandlede at designe og kode vores eget spil. I forbindelse med dette stiftede vi bekendtskab med javascript, css-animationer, Adobe Illustrator, UML aktivitetsdiagrammer og state machine diagrammer. <br><br> Det pågældende spil skulle designes og kodes ud fra eget selvvalgt koncept og egen idé ved brug af css-animationer og javascript. Yderligere lød en del af opgaven også på, at skulle formgive og designe egne figurelementer, UI-elementer og diverse spilskærme - startside, spil side, game over side, level complete side og så videre - hvilket alt sammen blev skitseret i hånden først og derefter udformet og rentegnet ved brug af Illustrator. Jeg benyttede mig af aktivitets- og state machine diagram i mit arbejde til at projektere det interaktive flow i spillet.</p>
             </div>
             <div class="b_1">
-                <img src="billeder/06_animation_mockup.png" alt="spil">
+                <img src="billeder/06_animation_mockup.webp" alt="spil">
             </div>
         </section>
         <section id="section_3">
             <!-- /* INDSÆT NYT MOCKUP BILLEDE AF NOGLE SKITSER FRA DESIGNPROCES */  -->
             <div class="b_2">
-                <img src="billeder/05_mockup.png" alt="mockup2">
+                <img src="billeder/08_mockup.webp" alt="mockup2">
             </div>
             <div class="tekst_2">
                 <p>Jeg gjorde brug af en cross-method idé-generering øvelse, som det første, i forsøget på at fremme nogen idéer/koncept til mit spil. Denne øvelse gav mig dog ikke nogen tilfredsstillende udslag i forhold til mit spil. Jeg valgte derfor at skrotte denne øvelse, og kom efterfølgende på forestillingen om et spil, der drager inspiration fra den animerede serie “South Park”. Serien er meget farverig og legende i sine former og figurer, samtidig med at alle figurer og scener i serien er bygget forholdsvis simpelt op i formerne. Dernæst begyndte jeg at skitsere en papirprototype af idéen / præmissen for spillet i form af baggrundshistorie, setting, UI-elementer, samt “gode” og “dårlige” figurelementer. <br><br> Stiludgangspunktet for mit spil blev flat design i samspil med inspiration fra serien “South Park”. Valget faldt på flat design, da det er en minimalistisk design stil. Det gav mig mulighed for at udforme mine figurelementer og UI-elementer i et simpelt og moderne udtryk. I forlængelse med førnævnte, gør flat design ofte brug af mange farver og et simpelt udtryk, hvilket flettede godt ind med min inspiration fra “South Park”.</p>
