--- a/ommig.html
+++ b/ommig.html
@@ -56,7 +56,7 @@
 
             </div>
             <div class="b_1">
-                <img src="billeder/portraet.png" alt="portraet">
+                <img src="billeder/portraet_cv.webp" alt="portraet">
             </div>
         </section>
     </main>
