--- a/ommig.html
+++ b/ommig.html
@@ -30,6 +30,7 @@
                 <a href="portfolio.html">LINK TIL MIT PORTFOLIO</a>
             </div>
         </section>
+        <hr>
         <section id="section_2">
             <div class="tekst">
                 <h3>Erfaring</h3>
@@ -39,8 +40,29 @@
                 <h4>Louisiana Museum of Modern Art, Humlebæk – tjener</h4>
                 <h4>2016 - Igangværende</h4>
                 <p>Jeg har arbejdet som cafémedarbejder/tjener siden starten af mit sabbatår, og gør det stadig. Det startede som deltid, men blev hurtigt fastansat, og var fastansat fra juni 2016 til august 2020. Jeg gik dog tilbage til deltid grundet studiestart. Her har jeg yderligere erhvervet mig erfaring med mennesker og opfyldning af kunders behov, samt service og større ansvarlighed. Dertil lært at fungere og samarbejde i et stort medarbejderteam.</p>
-                <br>
-                <hr>
+                <br>         
+                <!-- <h3>Uddanelse</h3>
+                <h4>Helsingør Gymnasium, Helsingør - STX</h4>
+                <h4>2013 - 2016</h4>
+                <p>Studentereksamen, 2016</p>
+                <h4>Roskilde Universitet (RUC), Roskilde - Humanistisk Bachelor</h4>
+                <h4>2020 - 2021</h4>
+                <p>Første semester</p>
+                <h4>NEXT KBH, København - Bygningssnedker</h4>
+                <h4>2021 - 2021</h4>
+                <h4>Københavns Erhvervsakademi (KEA), København - Multimediedesign</h4>
+                <h4>2021 - Igangværende</h4> -->
+            </div>
+            <div class="b_1">
+                <img src="billeder/portraet_cv_test2.webp" alt="portraet">
+            </div>
+        </section>
+        <hr>
+        <section id="section_3">
+            <!-- <div class="b_2">
+                <img src="billeder/08_mockup.webp" alt="mockup2">
+            </div> -->
+            <div class="tekst_2">
                 <h3>Uddanelse</h3>
                 <h4>Helsingør Gymnasium, Helsingør - STX</h4>
                 <h4>2013 - 2016</h4>
@@ -52,13 +74,8 @@
                 <h4>2021 - 2021</h4>
                 <h4>Københavns Erhvervsakademi (KEA), København - Multimediedesign</h4>
                 <h4>2021 - Igangværende</h4>
-
-
             </div>
-            <div class="b_1">
-                <img src="billeder/portraet_cv.webp" alt="portraet">
-            </div>
-        </section>
+        </section>  
     </main>
     <script src="index.js"></script>
 </body>
