--- a/02.html
+++ b/02.html
@@ -33,7 +33,7 @@
             <div class="links">
                 <a href="https://xd.adobe.com/view/c97e7c01-0804-4f8a-a9a5-2eb5a3bd63de-9c2d/screen/30fcf87d-be7d-4686-8448-f9f7583811c3" target="_blank" rel="noreferrer noopener">LINK TIL UX DESIGN</a>
                 <br>
-                <a href="billeder/UX Pitch slideshow.pdf" target="_blank" rel="noreferrer noopener">LINK TIL PITCH</a>
+                <a href="billeder/UX_Pitch_slideshow.pdf" target="_blank" rel="noreferrer noopener">LINK TIL PITCH</a>
             </div>
         </section>
         <hr>
