--- a/05.html
+++ b/05.html
@@ -31,16 +31,51 @@
                 <h1>PORTFOLIO</h1>
             </div>
         </section>
-        <hr>
         <section id="section_2">
             <div class="tekst">
-                <h3>Responsive site</h3>
-                <p> I tema 02 "Grundlæggende web" lærte vi, hvordan man koder en hjemmeside fra bunden ud af et givent wireframe. Vi stiftede bekendtskab med HTML, CSS og hvad det vil sige, at arbejde med tekstopsætning, typografi, farver og grid. Samt billedredigering vha. photoshop og Adobe XD. Vi lærte efterfølgende, hvad det vil sige, at gøre en hjemmeside responsiv og hvordan man implementerer dette. <br> <br> Vi blev i vores studiegrupper tildelt en stilart, der skulle være basis for de stilistiske beslutninger vi tog på hjemmesiden. I mit tilfælde blev jeg tildelt stilarten 'hipsterstyle'. <br><br> Jeg valgte at lave en hjemmeside om en fiktiv "barbershop", da jeg i forbindelse med lidt research - samt udarbejdelse af moodboard og styletile - kunne konkludere, at netop en forretning af den slags var hyppige brugere af stilarten 'hipsterstyle'. I forbindelse med hipsterstyle bliver der ofte benyttet afdæmpede/fadede- og jordnære farver. Jeg valgte derfor at gøre brug af primært sort og brun på min hjemmeside. Den brune farve fungerede samtidig godt med min fiktive virksomheds navn "EASTWOOD", der gerne skulle sende tankerne i nærheden af Clint Eastwood og hele "cowboyuniverset". I forlængelse af dette benyttede jeg sort farve til at tillægge siden et mere maskulint look. Mit valg af fonte faldt på "Rye" og "Oranienbaum", da deres udseende var med til at cementere forestillingen om en barbershop befindende i det vilde vesten, samtidig med at være let læselige for brugeren. 
-                </p>
+                <h3>Designproces</h3>
+                <p>Min første tanker var at jeg gerne ville lave et portfoliosite, der havde et minimalistisk udtryk samt have et mørkt tema. Jeg ville gerne gøre brug af whitespace på mit site og holde mig til få farve, hvilket i forlængelse af førnævnte gerne skulle give brugeren en overskuelig og brugervenlig oplevelse. Min designproces påbegyndte med skitsearbejde. Derefter udarbejdede jeg moodboard, styletile og wireframe, der fungerede som min guideline til at føre mine tanker og idéer om design og layout ud i livet. Det mørke tema jeg ønskede mig kommer til udtryk gennem et “rum tema”, da rummet altid har vakt en interesse hos mig. Dertil legede jeg med idéen om at gøre ‘indgangen’ til de forskellige temaer et stjernekort. Mit site er primært bestående af det samme grid layout for at holde en rød tråd gennem brugeroplevelsen.</p>
             </div>
             <div class="b_1">
-                <img src="billeder/02mockup.png" alt="mockup">
+                <img src="billeder/designproces.webp" alt="skitse">
             </div>
+        </section>
+        <hr>
+        <section id="section_3">
+            <div class="tekst">
+                <img src="billeder/forsideskitse_1.webp" alt="skitse">
+            </div>
+            <div class="b_1">
+                <img src="billeder/forsideskitse_2.webp" alt="skitse">
+            </div>
+        </section>
+        <hr>
+        <section id="section_4">
+            <div class="b_2">
+                <img src="billeder/portfolieskitse_1.webp" alt="skitse">
+            </div>
+            <div class="tekst_2">
+                <img src="billeder/portfolieskitse_2.webp" alt="skitse">
+            </div>
+        </section>
+        <hr>
+        <section id="section_5">
+            <div class="tekst_3">
+                <img src="billeder/temaskitse.webp" alt="skitse">
+            </div>
+            <div class="b_3">
+                <img src="billeder/cvskitse.webp" alt="skitse">
+            </div>
+        </section>
+        <hr>
+        <section id="section_6">
+            <div class="tekst_4">
+                <img src="billeder/moodboard_portfolio.webp" alt="moodboard">
+            </div>
+            <div class="tekst_5">
+                <img src="billeder/styletile_portfolio.webp" alt="styletile">
+            </div>
+        </section>
     </main>
     <script src="index.js"></script>
 </body>
