--- a/index.html
+++ b/index.html
@@ -24,20 +24,12 @@
     <main>
         <section id="section_1">
             <div class="hoved">
-                <h1>ADAM GREVE FABRICIUS</h1>
+                <h1 class="titel">PORTFOLIO</h1>
             </div>
             <div class="links">
-                <h2>1 SEMESTER</h2>
+                <h2 class="undertitel">ADAM GREVE FABRICIUS</h2>
             </div>
         </section>
-        <!-- <section id="section_forside">
-            <div>
-                <h1>ADAM GREVE FABRICIUS</h1>
-            </div>
-            <div>
-                <h2>1. semester</h2>
-            </div>
-        </section> -->
     </main>
     <script src="index.js"></script>
 </body>
