--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="icon" type="image/svg+xml" href="billeder/favicon_portfolio.svg">
 </head>
 <body>
-    <!-- <video id="videoBG" poster="billeder/baggrundsbillede.webp" autoplay muted loop>
+    <video id="videoBG" poster="billeder/baggrundsbillede.webp" autoplay muted loop>
         <source src="billeder/splashvideo.mp4" type="video/mp4">
-    </video> -->
+    </video>
     <header>
         <nav>
             <div id="menuknap">☰</div>
